service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-master
  labels:
    app: my-webapp
    tier: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: traffic-master
    tier: frontend
