ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traffic-master
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: www.banka.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traffic-master
                port:
                  number: 80
  tls:
    - secretName: tls-production-cert
      hosts:
        - www.banka.life
