manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: react-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: react-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app
        image: sergeiprokaev/traffic-master:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  namespace: react-app
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  namespace: react-app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - banka.life 
    secretName: react-app-tls
  rules:
  - host: banka.life
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-app-service
            port: 
              number: 80
